--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="content">
-        <h1>H1 DEMO</h1>
+        <h1>Pagina principal (empleados)</h1>
 
         {% block contenido %}{% endblock %}
     </div>
