--- a/templates/base.html
+++ b/templates/base.html
@@ -13,24 +13,20 @@
     <div id="content">
         <header>
 
-        <!--Contenedor donde van el logo y nombre de la empresa, y el carrito donde van los articulos a comprar-->
-        <div class="imagen-titulo">
-
-            <img src="" alt="Logo de la empresa">
-            <h1>Deustubular S.L.</h1>
-
-            <div class="parte_derecha">
-                <!--Contenedor donde se situan los enlaces de iniciar sesion y registrarse-->
-                <div class="sesion">
-                    <a href="#"><strong>variable_Nombre_Empleado</strong></a>
+            <div class="sesion">
                     <a href="#"><strong>Cerrar sesión</strong></a>
+            </div>
+
+        <!--Contenedor donde van el logo y nombre de la empresa, y el carrito donde van los articulos a comprar-->
+            <div class="imagen-titulo">
+
+                <img src="" alt="Logo de la empresa">
+                <h1>Deustubular S.L.</h1>
+                <div class="buscador">
+                    <input type="text">
+                    <input type="submit" value="Buscar" class="boton-input">
                 </div>
 
-                 <div class="buscador">
-                     <input type="text">
-                     <input type="submit" value="Buscar" class="input-filtrar">
-                </div>
-            </div>
         </div>
 
         </header>
