--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,8 +13,8 @@ html {
 
 /*Globales*/
 
-
-#fondo-body {
+/*El tipo de letra para todo el body de la pagina web*/
+#fondo {
     font-family: sans-serif;
     background: radial-gradient(circle, #ffffff, #cfd9e5);
 }
@@ -125,6 +125,7 @@ a {
     align-items: center;
 }
 
+
 /*Enlaces de navegacion*/
 
 /*Dar separacion entre el logo y titulo, con respecto a los enlaces*/
@@ -146,9 +147,12 @@ a {
 
 /*Estilos para los enlaces de dentro del nav*/
 .nav-principal a {
-    width: 100%; /* Ocupar el 100% del ancho del padre */
-    text-align: center; /* Centrar el texto horizontalmente */
-    margin: 0.5rem 0; /* Agregar la misma separación entre los enlaces */
+    width: 100%;
+    /* Ocupar el 100% del ancho del padre */
+    text-align: center;
+    /* Centrar el texto horizontalmente */
+    margin: 0.5rem 0;
+    /* Agregar la misma separación entre los enlaces */
     color: #8da2ad;
 }
 
@@ -161,3 +165,132 @@ a {
 .nav-principal a:hover {
     font-size: 1.7rem;
 }
+
+/*FOOTER*/
+
+/*Darle u color de fondo gris y dejar margen con respecto al formulario*/
+footer {
+    background-color: #f5f5f5;
+    margin-top: 2rem;
+}
+
+/*Darle una longitud horizontal de 75% para centrar ahi los elementos del footer*/
+.div-footer {
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+}
+
+/*Estilos para los tres contenedores del footer, donde esncuentran los enlaces y demas*/
+.contenedor-footer {
+    display: flex;
+    flex-direction: column;
+    width: 40rem;
+    margin-left: 5rem;
+}
+
+/*Tamaño y posicion de los titulos h3 */
+.contenedor-footer h3 {
+    font-size: 2rem;
+    margin-top: 1rem;
+}
+
+/*Tamaño y posicion de las imagenes del footer*/
+.contenedor-footer img {
+    margin-top: 1.5rem;
+    width: 80%;
+}
+
+/*Estilos para el div donde se encuentra el logo de la empresa y el nombre*/
+.logo-footer {
+    display: flex;
+    align-items: center;
+    height: 5rem;
+}
+
+/*Tamaño y posicion de la imagen del logo de la empresa*/
+.logo-footer img {
+    height: 5rem;
+    width: 6.5rem;
+    margin-right: 1rem;
+}
+
+/*Color y tamaño del titulo h1 del footer con el nombre de la empresa*/
+.logo-footer h1 {
+    color: #8da2ad;
+    font-size: 2.5rem;
+    margin: 0;
+    white-space: nowrap;
+}
+
+/*Tamaño de letra y posicion del titulo h4 del div de la izquierda del footer*/
+.contenedor-footer h4 {
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+/*Estilos del nav donde estan los enlaces del footer*/
+.enlaces-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 0.5rem;
+}
+
+.contenedor-footer-soporte {
+    width: 80%;
+}
+
+.contenedor-footer p {
+    margin-top: 0.5rem;
+    font-size: 1.5rem;
+    text-align:justify
+}
+
+.contenedor-footer ul {
+    padding-left: 0.8rem; /* Elimina el relleno predeterminado de la lista */
+    margin-left: 0.3rem;
+    margin-top: 0.5rem;
+}
+
+.contenedor-footer li {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    white-space: nowrap;
+}
+
+/*Footer de abajo del todo de la pagina*/
+
+/*Estilos para el div donde esta la informacion de abajo del todo de la pagina*/
+.div-footer-abajo {
+    background-color: black;
+    height: 2.6rem;
+    display: flex;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+
+/*Tamaño del div donde esta la informacion de los derechos y los dos enlaces*/
+.div-footer-p {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    height: 2.6rem;
+    align-items: center;
+}
+
+/*Estilos para la letra de la informacion de los derechos y de los dos enlaces*/
+.div-footer-p p,
+.enlaces-footer-abajo a {
+    color: white;
+    font-size: 1.1rem;
+}
+
+/*Meter margen entre los dos enlaces*/
+.enlaces-footer-abajo a {
+    margin-left: 2.5rem;
+}
+
+
