--- a/templates/appGestionProduccion/proceso_create.html
+++ b/templates/appGestionProduccion/proceso_create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block contenido %}
-    <h2>Nuevo Empleado</h2>
+    <h2>Nuevo Proceso</h2>
     <form action="{% url 'proceso_create' %}" method="post">
         {% csrf_token %}
         {{ formulario.errors }}
