--- a/templates/appGestionProduccion/empleado_create.html
+++ b/templates/appGestionProduccion/empleado_create.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block contenido %}
     <h2>Nuevo Empleado</h2>
-    <form action="{% url 'empleado_create' %}" method="post">
-        {% csrf_token %}
-        {{ formulario.errors }}
-        {{ formulario.as_ul }}
-        <input type="submit" value="Nuevo empleado"/>
-    </form>
+    <div class="div-formulario">
+        <form class="formulario" action="{% url 'empleado_create' %}" method="post">
+            {% csrf_token %}
+            {{ formulario.errors }}
+            {{ formulario.as_ul }}
+            <input type="submit" value="Nuevo empleado"/>
+        </form>
+    </div>
 
 {% endblock %}
