--- a/static/css/style.css
+++ b/static/css/style.css
@@ -350,10 +350,14 @@ table {
 }
 
 .formulario  {
+    width: 35%;
+}
+
+.formulario_proceso {
     width: 45%;
 }
 
-.formulario label {
+form label {
     font-size: 2.2rem; /* Ajusta el tamaño de la fuente de las etiquetas */
     list-style-type: none; /* Elimina el punto negro de la izquierda */
     color: #8da2ad;
@@ -366,8 +370,51 @@ form input[type="number"] {
     border-radius: 4px;
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
+    margin-left: 1rem;
 }
 
-.formulario input[type="submit"] {
+form select {
+    border: 1px solid #8da2ad;
+    border-radius: 4px;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1rem;
+}
+
+select[name="empleados_asignados"] {
+    margin-bottom: 1.5rem;
+    margin-left: 1rem;
+    color: #333;
+}
+
+form input[type="submit"] {
+    background-color: #8da2ad;
+    color: #e3e5ea;
+    font-size: 1.5rem;
+    padding: 0.3rem 0.8rem;
+    border-radius: 4px;
+    cursor: pointer;
+    border: 1px solid black;
     align-self: flex-end; /* El botón se alineará al final del formulario */
+    margin-left: 8rem;
+}
+
+/*Boton para ir a la página de atras*/
+
+.div-atras {
+    height: 2.5rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.boton-atras {
+    background-color: #8da2ad;
+    color: #e3e5ea;
+    font-size: 1.5rem;
+    padding: 0.3rem 0.8rem;
+    border-radius: 4px;
+    cursor: pointer;
+    border: 1px solid black;
+    margin: 3rem 3rem 0 0;
 }
