--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <!-- Link para poder importar iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>{% block titulo %}TITULO DE ARRIBA{% endblock %}</title>
 </head>
 <body id="fondo-body">
@@ -37,7 +43,7 @@
             <!--Nav donde se encuentran todos los enlaces para navegar por las diferentes paginas-->
             <nav class="nav-principal">
                 <a href="{% url 'empleado_list' %}">Empleados</a>
-                <a href="#">Procesos</a>
+                <a href="{% url 'proceso_list' %}">Procesos</a>
                 <a href="#">Equipos</a>
                 <a href="#">Órdenes</a>
             </nav>
