--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <title>{% block titulo %}TITULO DE ARRIBA{% endblock %}</title>
+        
+    <title>{% block titulo %}Deustubular S.L.{% endblock %}</title>
 </head>
 <body id="fondo-body">
     <div id="content">
