--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
             <nav class="nav-principal">
                 <a href="{% url 'empleado_list' %}">Empleados</a>
                 <a href="{% url 'proceso_list' %}">Procesos</a>
-                <a href="#">Equipos</a>
+                <a href="{% url 'equipo_list' %}">Equipo</a>
                 <a href="#">Órdenes</a>
             </nav>
         </div>
